argocd/vaultwarden/storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
